# Research-SDE

./: README.md  SV_NSDE_教学指南.md  USAGE_GUIDE.md
Archive/: QUICKSTART.md  pyproject.toml  requirements.txt  setup.py
Archive/examples/: quick_start.py
Archive/scripts/: run_evaluation.py
Archive/src/sv_nsde/: __init__.py  decoder.py  encoder.py  evaluate.py  intensity.py  model.py  train.py
notebooks/: SV_NSDE_Colab.ipynb
results/: report.txt  results.json
src/sv_nsde/: __init__.py  baselines.py  data.py  evaluate.py  experiment.py  model.py  sde.py
