[project]
name = "sv-nsde"
version = "0.1.0"
description = "Semantic Volatility-Modulated Neural SDE for Crisis Dynamics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "transformers>=4.30.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sv_nsde"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
